# nanoclaw-py

./: .env.example  .gitignore  README.md  _build_nanoclaw.bat  _start_nanoclaw_py.bat  nanoclaw.spec  pyproject.toml  run_nanoclaw.py
src/nanoclaw/: __main__.py  agent.py  bot.py  config.py  conversations.py  db.py  memory.py  rewriter.py  scheduler.py  ws.py
src/nanoclaw/static/: index.html
